# pygpiper

./: .gitignore  README.md  README.md~  augment.py  augment.py~  config.yml  config.yml~  main.py  main.py~  pyproject.toml
aug/output/: output_0_0_0.yaml  output_10001_0_0.yaml  output_10001_1_0.yaml
src/: clean.py  clean.py~  tokencounter.py  tokencounter.py~
src/pygmundipipe/: augment.py  clean.py  cli.py  cli.py~  process_data.py  tokencounter.py  tokencounter.py~  utils.py
templates/: 1.txt  1.txt~
templates/emotionlabels/: 1.txt  2.txt
