[project]
name = "pygmundipipe"
version = "0.1.0"
description = "the pygmundipipe package"
dependencies = [
    "transformers>=4.36.2",
    "datasets>=2.16.1",
    "torch>=2.1.2",
    "typer>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
pygmundipipe = "pygmundipipe:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1",
    "mypy>=1.8",
    "tqdm-stubs>=0.2",
    "types-PyYAML>=6",
    "types-requests>=2.31",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pygmundipipe"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
